// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector App selector User is connected 1`] = `
Object {
  "isUserConnected": true,
  "user": Object {
    "token": "FakeToken",
  },
}
`;

exports[`Selector App selector User is not connected 1`] = `
Object {
  "isUserConnected": false,
  "user": Object {
    "token": "",
  },
}
`;
